--- a/src/letreiro2.html
+++ b/src/letreiro2.html
@@ -116,7 +116,19 @@
       <div class="col-span-6 row">
         <button type="button" class="btn" id="fullscreen">Tela cheia</button>
         <button type="button" class="btn" id="hide">Ocultar controles</button>
-        <!--<button type="button" class="btn" id="download">Baixar HTML</button>-->
+      </div>
+
+      <div class="col-span-6 row">
+        <label for="videoRes">Resolução/Orientação</label>
+        <select id="videoRes">
+          <option value="1920x1080">Horizontal (1920×1080)</option>
+          <option value="1080x1920">Vertical (1080×1920)</option>
+        </select>
+        <label for="videoFps">FPS</label>
+        <select id="videoFps">
+          <option value="60">60</option>
+          <option value="30">30</option>
+        </select>
       </div>
 
       <div class="col-span-6 row">
@@ -124,8 +136,6 @@
         <input type="number" id="recSeconds" min="1" max="600" value="10" />
         <button type="button" class="btn" id="renderAuto">Baixar vídeo (auto)</button>
       </div>
-
-      <!--<div class="col-span-12 footer muted">Dica: vire o celular na horizontal para letras gigantes. O vídeo é gerado em 1080p60 (.webm).</div>-->
     </form>
   </div>
 
@@ -150,6 +160,8 @@
       weight: +(localStorage.getItem('led:weight') || 800),
       dir: localStorage.getItem('led:dir') || 'ltr',
       paused: JSON.parse(localStorage.getItem('led:paused') ?? 'false'),
+      res: localStorage.getItem('led:res') || '1920x1080',
+      fps: +(localStorage.getItem('led:fps') || 60),
     };
 
     // Inputs
@@ -167,9 +179,10 @@
     const dirSel = $('#direction');
     const fsBtn = $('#fullscreen');
     const hideBtn = $('#hide');
-    const dlBtn = $('#download');
     const renderAutoBtn = $('#renderAuto');
     const recSeconds  = $('#recSeconds');
+    const videoResSel = $('#videoRes');
+    const videoFpsSel = $('#videoFps');
 
     function setVar(name, value){ document.documentElement.style.setProperty(name, value); }
 
@@ -205,6 +218,8 @@
       localStorage.setItem('led:weight', String(state.weight));
       localStorage.setItem('led:dir', state.dir);
       localStorage.setItem('led:paused', JSON.stringify(!!state.paused));
+      localStorage.setItem('led:res', state.res);
+      localStorage.setItem('led:fps', String(state.fps));
     }
 
     // Inicializar valores dos inputs
@@ -220,6 +235,8 @@
     glow.checked = !!state.glow;
     pause.checked = !!state.paused;
     dirSel.value = state.dir;
+    videoResSel.value = state.res;
+    videoFpsSel.value = String(state.fps);
     apply();
 
     // Eventos
@@ -235,6 +252,8 @@
     glow.addEventListener('change', (e)=>{ state.glow = e.target.checked; apply(); });
     pause.addEventListener('change', (e)=>{ state.paused = e.target.checked; apply(); });
     dirSel.addEventListener('change', (e)=>{ state.dir = e.target.value; apply(); });
+    videoResSel.addEventListener('change', (e)=>{ state.res = e.target.value; apply(); });
+    videoFpsSel.addEventListener('change', (e)=>{ state.fps = +e.target.value; apply(); });
 
     fsBtn.addEventListener('click', async ()=>{
       try{
@@ -246,16 +265,6 @@
 
     hideBtn.addEventListener('click', ()=>{ panel.style.display = (panel.style.display === 'none' ? 'grid' : 'none'); });
 
-    // Baixar HTML com o estado atual inline (variáveis CSS já aplicadas)
-    dlBtn.addEventListener('click', ()=>{
-      const html = '<!DOCTYPE html>' + document.documentElement.outerHTML;
-      const blob = new Blob([html], { type: 'text/html' });
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url; a.download = 'letreiro_led.html'; a.click();
-      setTimeout(()=> URL.revokeObjectURL(url), 1000);
-    });
-
     // ====== RENDERIZAÇÃO AUTOMÁTICA PARA VÍDEO (SEM CAPTURAR TELA) ======
     function pickMime(){
       const c = ['video/webm;codecs=vp9','video/webm;codecs=vp8','video/webm'];
@@ -265,20 +274,27 @@
 
     async function renderAutoVideo(){
       const sec = Math.max(1, Math.min(600, parseInt(recSeconds.value||'10',10)));
-      const W = 1920, H = 1080, FPS = 60;
+      const [W,H] = state.res === '1080x1920' ? [1080,1920] : [1920,1080];
+      const FPS = state.fps === 30 ? 30 : 60;
 
+      // canvas/stream/recorder NOVOS a cada clique
       const canvas = document.createElement('canvas');
       canvas.width = W; canvas.height = H;
       const ctx = canvas.getContext('2d');
 
-      // Preparar stream e gravador
       const stream = canvas.captureStream(FPS);
       const mime = pickMime();
       if(!mime){ alert('Seu navegador não suporta gravação WebM/VP8/VP9. Tente no Chrome/Edge/Firefox.'); return; }
-      const recorder = new MediaRecorder(stream, { mimeType: mime, videoBitsPerSecond: 6_000_000 });
+
       const chunks = [];
-      recorder.ondataavailable = e=>{ if(e.data.size) chunks.push(e.data); };
-      const done = new Promise(res=>{ recorder.onstop = ()=> res(new Blob(chunks, { type: mime })); });
+      const recorder = new MediaRecorder(stream, { mimeType: mime, videoBitsPerSecond: 8_000_000 });
+      recorder.ondataavailable = e=>{ if(e.data && e.data.size) chunks.push(e.data); };
+      const done = new Promise(res=>{
+        recorder.onstop = ()=>{
+          stream.getTracks().forEach(t=>t.stop());
+          res(new Blob(chunks, { type: mime }));
+        };
+      });
 
       // Config de texto
       const msg = (state.uppercase ? (state.message||'').toUpperCase() : (state.message||'\u00A0'));
@@ -286,65 +302,69 @@
       ctx.font = `${state.weight} ${fontPx}px system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Arial, sans-serif`;
       ctx.textBaseline = 'middle';
 
-      // Medidas
+      // Medidas e velocidade
       const textW = ctx.measureText(msg).width;
       const gapPx = W * (state.gap/100);
-      const span = textW + gapPx; // distância entre repetições
-      const pxPerSec = span / (state.speed || 12); // manter consistente com CSS
-      const dirSign = (state.dir === 'rtl') ? 1 : -1; // rtl => direita
+      const span = Math.max(1, textW + gapPx);          // evita zero
+      const pxPerSec = span / (state.speed || 12);
+      const dirSign = (state.dir === 'rtl') ? 1 : -1;
 
-      // Estilo
       const bg = state.bg;
       const fg = state.fg;
       const glow = state.glow;
       const glowColor = state.glowColor;
 
-      // Animação
-      const start = performance.now();
-      function drawFrame(now){
-        const t = (now - start) / 1000; // segundos
-        const offset = ((dirSign * pxPerSec * t) % span + span) % span; // 0..span
+      // Loop de desenho
+      const t0 = performance.now();
+      let rafId = 0;
 
-        // fundo
+      function drawFrame(now){
+        const t = (now - t0) / 1000;
+        const offset = ((dirSign * pxPerSec * t) % span + span) % span;
+
         ctx.save();
         ctx.fillStyle = bg; ctx.fillRect(0,0,W,H);
 
-        // glow opcional
         if(glow){ ctx.shadowColor = glowColor; ctx.shadowBlur = Math.round(fontPx*0.25); }
         ctx.fillStyle = fg;
 
         const y = H/2;
-        // desenha repetições suficientes para cobrir a largura
         for(let x = -span; x < W + span; x += span){
-          const dx = x - offset + (state.dir==='rtl' ? 0 : 0);
-          ctx.fillText(msg, dx, y);
+          ctx.fillText(msg, x - offset, y);
         }
         ctx.restore();
+
+        rafId = requestAnimationFrame(drawFrame);
       }
 
-      let rafId = null;
-      function loop(now){ drawFrame(now); rafId = requestAnimationFrame(loop); }
+      // garante 1 frame antes de iniciar gravação
+      await new Promise(r => requestAnimationFrame(r));
 
-      recorder.start();
-      rafId = requestAnimationFrame(loop);
+      recorder.start(250); // timeslice ajuda em execuções repetidas
+      rafId = requestAnimationFrame(drawFrame);
 
-      await new Promise(res=> setTimeout(res, sec*1000));
+      await new Promise(res => setTimeout(res, sec*1000));
 
       cancelAnimationFrame(rafId);
       recorder.stop();
       const blob = await done;
 
+      // Download robusto: anexa link ao DOM e só depois clica
       const url = URL.createObjectURL(blob);
       const a = document.createElement('a');
-      a.href = url; a.download = `letreiro_led_${sec}s.webm`;
+      a.href = url; a.download = `letreiro_led_${state.res}_${FPS}fps_${sec}s.webm`;
+      document.body.appendChild(a);
       a.click();
-      setTimeout(()=> URL.revokeObjectURL(url), 1500);
+      a.remove();
+      setTimeout(()=> URL.revokeObjectURL(url), 3000);
     }
 
     renderAutoBtn.addEventListener('click', async ()=>{
-      renderAutoBtn.disabled = true; renderAutoBtn.textContent = 'Gerando...';
+      renderAutoBtn.disabled = true; 
+      const old = renderAutoBtn.textContent;
+      renderAutoBtn.textContent = 'Gerando...';
       try{ await renderAutoVideo(); }
-      finally{ renderAutoBtn.disabled = false; renderAutoBtn.textContent = 'Baixar vídeo (auto)'; }
+      finally{ renderAutoBtn.disabled = false; renderAutoBtn.textContent = old; }
     });
 
     // Garantir animação contínua mesmo com interações
