--- a/src/index.html
+++ b/src/index.html
@@ -62,13 +62,13 @@
   <div class="wrap">
     <div class="marquee" id="marquee" aria-label="Faixa do letreiro">
       <div class="track led" id="track">
-        <div class="chunk"><span class="msg upper" id="text1">BIO MOLEXPLORER</span></div>
-        <div class="chunk"><span class="msg upper" id="text2">BIO MOLEXPLORER</span></div>
+        <div class="chunk"><span class="msg upper" id="text1">myllla paolucci lousada cardoso...</span></div>
+        <div class="chunk"><span class="msg upper" id="text2">myllla paolucci lousada cardoso...</span></div>
       </div>
     </div>
 
     <form class="controls" id="panel" autocomplete="off">
-      <input class="col-span-12" type="text" id="inputText" placeholder="Digite sua mensagem…" value="BIO MOLEXPLORER" />
+      <input class="col-span-12" type="text" id="inputText" placeholder="Digite sua mensagem…" value="myllla paolucci lousada cardoso..." />
 
       <div class="col-span-3">
         <label for="fg">Cor do texto</label>
@@ -148,7 +148,7 @@
 
     // Estado persistido
     const state = {
-      message: localStorage.getItem('led:message') || 'BIO MOLEXPLORER',
+      message: localStorage.getItem('led:message') || 'myllla paolucci lousada cardoso...',
       fg: localStorage.getItem('led:fg') || '#ff2b2b',
       glowColor: localStorage.getItem('led:glowColor') || '#ff5a5a',
       bg: localStorage.getItem('led:bg') || '#000000',
