--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,6 @@
     html,body{ height:100%; margin:0; background:var(--bg); color:var(--fg); font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Arial, sans-serif; overscroll-behavior: none; }
     .wrap{ display:flex; flex-direction:column; height:100dvh; gap:.6rem; }
 
-    /* FAIXA DO LETREIRO */
     .marquee{ position:relative; flex:1 1 auto; overflow:hidden; background:var(--bg); isolation:isolate; }
     .track{ position:absolute; inset:0; display:flex; align-items:center; gap:var(--gap); width:max-content; animation: scroll var(--speed) linear infinite; will-change: transform; }
     .track.paused{ animation-play-state: paused; }
@@ -30,19 +29,18 @@
     @keyframes scroll{ from{ transform: translateX(0); } to{ transform: translateX(-50%); } }
     .rtl{ animation-direction: reverse; }
 
-    /* CONTROLES */
     .controls{ flex:0 0 auto; display:grid; grid-template-columns: repeat(12, 1fr); gap:.6rem; padding: .6rem .8rem .9rem; background: color-mix(in srgb, var(--bg) 86%, #111 14%); border-top:1px solid color-mix(in srgb, var(--fg) 20%, transparent); }
     .controls input[type="text"]{ grid-column: 1 / -1; }
     .controls label{ font-size:.9rem; color:#ddd; opacity:.9; }
     .controls input, .controls select, .controls button{ width:100%; }
-    .controls .row{ display:flex; gap:.6rem; align-items:center; }
+    .controls .row{ display:flex; gap:.6rem; align-items:center; flex-wrap:wrap; }
     .controls .col-span-3{ grid-column: span 3; }
     .controls .col-span-4{ grid-column: span 4; }
     .controls .col-span-5{ grid-column: span 5; }
     .controls .col-span-6{ grid-column: span 6; }
     .controls .col-span-12{ grid-column: 1 / -1; }
 
-    .btn{ background:#1f1f1f; color:#f0f0f0; border:1px solid #333; padding:.7rem .8rem; border-radius:.8rem; font-weight:600; }
+    .btn{ background:#1f1f1f; color:#f0f0f0; border:1px solid #333; padding:.7rem .8rem; border-radius:.8rem; font-weight:600; cursor:pointer; }
     .btn:active{ transform: scale(.99); }
     .toggle{ display:flex; gap:.6rem; align-items:center; }
     .muted{ opacity:.75; }
@@ -134,7 +132,8 @@
       <div class="col-span-6 row">
         <label for="recSeconds">Duração do vídeo (s)</label>
         <input type="number" id="recSeconds" min="1" max="600" value="10" />
-        <button type="button" class="btn" id="renderAuto">Baixar vídeo (auto)</button>
+        <button type="button" class="btn" id="renderAutoWebm">Baixar WEBM (auto)</button>
+        <button type="button" class="btn" id="renderAutoMp4">Baixar MP4 (auto)</button>
       </div>
     </form>
   </div>
@@ -146,7 +145,6 @@
     const t2 = $('#text2');
     const panel = $('#panel');
 
-    // Estado persistido
     const state = {
       message: localStorage.getItem('led:message') || 'myllla paolucci lousada cardoso...',
       fg: localStorage.getItem('led:fg') || '#ff2b2b',
@@ -164,7 +162,6 @@
       fps: +(localStorage.getItem('led:fps') || 60),
     };
 
-    // Inputs
     const inputText = $('#inputText');
     const fg = $('#fg');
     const glowColor = $('#glowColor');
@@ -179,7 +176,8 @@
     const dirSel = $('#direction');
     const fsBtn = $('#fullscreen');
     const hideBtn = $('#hide');
-    const renderAutoBtn = $('#renderAuto');
+    const renderWebmBtn = $('#renderAutoWebm');
+    const renderMp4Btn = $('#renderAutoMp4');
     const recSeconds  = $('#recSeconds');
     const videoResSel = $('#videoRes');
     const videoFpsSel = $('#videoFps');
@@ -205,7 +203,6 @@
       track.classList.toggle('rtl', state.dir === 'rtl');
       track.classList.toggle('paused', !!state.paused);
 
-      // persistir
       localStorage.setItem('led:message', state.message);
       localStorage.setItem('led:fg', state.fg);
       localStorage.setItem('led:glowColor', state.glowColor);
@@ -222,7 +219,6 @@
       localStorage.setItem('led:fps', String(state.fps));
     }
 
-    // Inicializar valores dos inputs
     inputText.value = state.message;
     fg.value = state.fg;
     glowColor.value = state.glowColor;
@@ -239,7 +235,6 @@
     videoFpsSel.value = String(state.fps);
     apply();
 
-    // Eventos
     inputText.addEventListener('input', (e)=>{ state.message = e.target.value; apply(); });
     fg.addEventListener('input', (e)=>{ state.fg = e.target.value; apply(); });
     glowColor.addEventListener('input', (e)=>{ state.glowColor = e.target.value; apply(); });
@@ -265,26 +260,24 @@
 
     hideBtn.addEventListener('click', ()=>{ panel.style.display = (panel.style.display === 'none' ? 'grid' : 'none'); });
 
-    // ====== RENDERIZAÇÃO AUTOMÁTICA PARA VÍDEO (SEM CAPTURAR TELA) ======
     function pickMime(){
       const c = ['video/webm;codecs=vp9','video/webm;codecs=vp8','video/webm'];
       for(const t of c){ if(window.MediaRecorder && MediaRecorder.isTypeSupported && MediaRecorder.isTypeSupported(t)) return t; }
       return '';
     }
 
-    async function renderAutoVideo(){
+    async function renderAutoBlob(){
       const sec = Math.max(1, Math.min(600, parseInt(recSeconds.value||'10',10)));
       const [W,H] = state.res === '1080x1920' ? [1080,1920] : [1920,1080];
       const FPS = state.fps === 30 ? 30 : 60;
 
-      // canvas/stream/recorder NOVOS a cada clique
       const canvas = document.createElement('canvas');
       canvas.width = W; canvas.height = H;
       const ctx = canvas.getContext('2d');
 
       const stream = canvas.captureStream(FPS);
       const mime = pickMime();
-      if(!mime){ alert('Seu navegador não suporta gravação WebM/VP8/VP9. Tente no Chrome/Edge/Firefox.'); return; }
+      if(!mime){ throw new Error('Seu navegador não suporta gravação WebM/VP8/VP9. Use Chrome/Edge/Firefox.'); }
 
       const chunks = [];
       const recorder = new MediaRecorder(stream, { mimeType: mime, videoBitsPerSecond: 8_000_000 });
@@ -296,16 +289,14 @@
         };
       });
 
-      // Config de texto
       const msg = (state.uppercase ? (state.message||'').toUpperCase() : (state.message||'\u00A0'));
       const fontPx = Math.round(W * (state.size/100));
       ctx.font = `${state.weight} ${fontPx}px system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Arial, sans-serif`;
       ctx.textBaseline = 'middle';
 
-      // Medidas e velocidade
       const textW = ctx.measureText(msg).width;
       const gapPx = W * (state.gap/100);
-      const span = Math.max(1, textW + gapPx);          // evita zero
+      const span = Math.max(1, textW + gapPx);
       const pxPerSec = span / (state.speed || 12);
       const dirSign = (state.dir === 'rtl') ? 1 : -1;
 
@@ -314,7 +305,6 @@
       const glow = state.glow;
       const glowColor = state.glowColor;
 
-      // Loop de desenho
       const t0 = performance.now();
       let rafId = 0;
 
@@ -337,37 +327,135 @@
         rafId = requestAnimationFrame(drawFrame);
       }
 
-      // garante 1 frame antes de iniciar gravação
       await new Promise(r => requestAnimationFrame(r));
-
-      recorder.start(250); // timeslice ajuda em execuções repetidas
+      recorder.start(250);
       rafId = requestAnimationFrame(drawFrame);
-
       await new Promise(res => setTimeout(res, sec*1000));
-
       cancelAnimationFrame(rafId);
       recorder.stop();
-      const blob = await done;
 
-      // Download robusto: anexa link ao DOM e só depois clica
+      const webmBlob = await done;
+      return { blob: webmBlob, ext: 'webm', fps: FPS, res: state.res, sec };
+    }
+
+    function downloadBlob(blob, filename){
       const url = URL.createObjectURL(blob);
       const a = document.createElement('a');
-      a.href = url; a.download = `letreiro_led_${state.res}_${FPS}fps_${sec}s.webm`;
-      document.body.appendChild(a);
-      a.click();
-      a.remove();
+      a.href = url; a.download = filename;
+      document.body.appendChild(a); a.click(); a.remove();
       setTimeout(()=> URL.revokeObjectURL(url), 3000);
     }
 
-    renderAutoBtn.addEventListener('click', async ()=>{
-      renderAutoBtn.disabled = true; 
-      const old = renderAutoBtn.textContent;
-      renderAutoBtn.textContent = 'Gerando...';
-      try{ await renderAutoVideo(); }
-      finally{ renderAutoBtn.disabled = false; renderAutoBtn.textContent = old; }
+    // --- Loader robusto do FFmpeg UMD: local → jsDelivr → unpkg
+    async function loadFFmpegUMD(){
+      if (window.FFmpeg?.createFFmpeg) return window.FFmpeg;
+
+      const urls = [
+        '/ffmpeg/ffmpeg.min.js',
+        'https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.12.6/dist/ffmpeg.min.js',
+        'https://unpkg.com/@ffmpeg/ffmpeg@0.12.6/dist/ffmpeg.min.js'
+      ];
+
+      for (const src of urls){
+        try{
+          await new Promise((resolve, reject)=>{
+            const s = document.createElement('script');
+            s.src = src;
+            s.crossOrigin = 'anonymous';
+            s.defer = true;
+            s.onload = resolve;
+            s.onerror = reject;
+            document.head.appendChild(s);
+          });
+          if (window.FFmpeg?.createFFmpeg) return window.FFmpeg;
+        }catch(_e){}
+      }
+      throw new Error('Não consegui carregar a biblioteca FFmpeg.');
+    }
+
+    // FFmpeg instância única com fallback no core
+    let ffmpegInstance = null;
+    async function ensureFFmpeg(){
+      const FF = await loadFFmpegUMD();
+      const { createFFmpeg } = FF;
+      if (ffmpegInstance) return ffmpegInstance;
+
+      const corePaths = [
+        '/ffmpeg/ffmpeg-core.js',
+        'https://cdn.jsdelivr.net/npm/@ffmpeg/core@0.12.6/dist/ffmpeg-core.js',
+        'https://unpkg.com/@ffmpeg/core@0.12.6/dist/ffmpeg-core.js'
+      ];
+
+      let lastErr = null;
+      for (const corePath of corePaths){
+        try{
+          const inst = createFFmpeg({ log:false, corePath });
+          await inst.load();
+          ffmpegInstance = inst;
+          return ffmpegInstance;
+        }catch(e){ lastErr = e; }
+      }
+      throw lastErr || new Error('Falha ao carregar o core do FFmpeg.');
+    }
+
+    async function webmToMp4(webmBlob, outName, fps){
+      const FF = await loadFFmpegUMD();
+      const { fetchFile } = FF;
+      const ffmpeg = await ensureFFmpeg();
+
+      const inName = 'in.webm';
+      const outFile = 'out.mp4';
+
+      ffmpeg.FS('writeFile', inName, await fetchFile(webmBlob));
+
+      await ffmpeg.run(
+        '-i', inName,
+        '-c:v', 'libx264',
+        '-pix_fmt', 'yuv420p',
+        '-movflags', '+faststart',
+        '-r', String(fps),
+        outFile
+      );
+
+      const data = ffmpeg.FS('readFile', outFile);
+      const mp4Blob = new Blob([data.buffer], { type: 'video/mp4' });
+
+      try { ffmpeg.FS('unlink', inName); } catch(_){}
+      try { ffmpeg.FS('unlink', outFile); } catch(_){}
+
+      downloadBlob(mp4Blob, outName);
+    }
+
+    renderWebmBtn.addEventListener('click', async ()=>{
+      renderWebmBtn.disabled = true;
+      const old = renderWebmBtn.textContent;
+      renderWebmBtn.textContent = 'Gerando...';
+      try{
+        const { blob, fps, res, sec } = await renderAutoBlob();
+        downloadBlob(blob, `letreiro_led_${res}_${fps}fps_${sec}s.webm`);
+      }catch(err){
+        alert(err?.message || String(err));
+      }finally{
+        renderWebmBtn.disabled = false;
+        renderWebmBtn.textContent = old;
+      }
     });
 
-    // Garantir animação contínua mesmo com interações
+    renderMp4Btn.addEventListener('click', async ()=>{
+      renderMp4Btn.disabled = true;
+      const old = renderMp4Btn.textContent;
+      renderMp4Btn.textContent = 'Convertendo...';
+      try{
+        const { blob, fps, res, sec } = await renderAutoBlob();
+        await webmToMp4(blob, `letreiro_led_${res}_${fps}fps_${sec}s.mp4`, fps);
+      }catch(err){
+        alert(err?.message || String(err));
+      }finally{
+        renderMp4Btn.disabled = false;
+        renderMp4Btn.textContent = old;
+      }
+    });
+
     document.addEventListener('visibilitychange', ()=>{
       if(!document.hidden && !state.paused){ track.style.animationPlayState = 'running'; }
     });
